# autonomous-car-SLAM-and-ROS-Navigation-

./: LICENSE  README.md
Arduino/: Arduino.ino
pc/arm_control/: CMakeLists.txt  package.xml
pc/arm_control/config/: arm_control.yaml  controllers.yaml  hardware.yaml  joint_limits.yaml
pc/arm_control/include/arm_control/: MyRobot_hardware_interface.h
pc/arm_control/launch/: arm_control.launch  arm_control_gazebo.launch  arm_control_with_rviz.launch
pc/arm_control/src/: Arm_control_client_sim.py  Arm_control_server.py  Arm_initial_client.py  InverseKinematics.py  MyRobot_hardware_interface.cpp  aruco.py  camera_client.py  camera_dist.csv  object_pose_control.py  pose_client.py  servos_drive.py
pc/bot_msgs/: CMakeLists.txt  package.xml
pc/bot_msgs/action/: joint_control.action
pc/bot_msgs/msg/: feedback.msg  servo.msg
pc/bot_msgs/srv/: Inverse_kinematics.srv
pc/g_turtle/: CMakeLists.txt  package.xml
pc/g_turtle/config/: gmapping_params.yaml  odem_map.rviz  robot_with_arm.rviz  rviz.rviz
pc/g_turtle/launch/: amcl.launch  gmapping_tel_odom.launch  move_base.launch  odem_vis.launch  odom_with_arm.launch  turtlebot3_navigation.launch
pc/g_turtle/params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
pc/robot_simulation/: CMakeLists.txt  package.xml
pc/robot_simulation/config/: robot.rviz
pc/robot_simulation/launch/: display.launch  gazebo.launch  test.launch
raspberry_pi/car_control_2/: CMakeLists.txt  package.xml
(+33 files in other folders)
